--- a/app/design/frontend/beautybop/bbop/web/tailwind/components/search-panel.css
+++ b/app/design/frontend/beautybop/bbop/web/tailwind/components/search-panel.css
@@ -20,13 +20,8 @@
     @apply bg-white border-t border-gray-200 px-6 py-4;
 }
 
-.bb-search-input {
-    @apply w-full
-           border
-           border-gray-200
-           rounded-lg
-           px-4
-           py-3;
+.bb-search-input input {
+    @apply w-full border border-black rounded-lg px-4 py-3;
 }
 
 .bb-header-search-icon button {
